// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket reducers add tags 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers add tags 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers add tags 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers apply macro 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers apply macro 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "id": 2,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers clear applied macro 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers clear ticket 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers delete macro action args on applied 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "actions": Object {
        "1": Object {
          "arguments": Object {
            "foo": "bar",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers delete message 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [
    Object {
      "id": 1,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers delete pending message 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 2,
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
      },
    ],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers display history on next page 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": true,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers display history on next page 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers fetch ticket 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": true,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers fetch ticket 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "messages": Array [
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "id": 1,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers fetch ticket 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers mark dirty 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": true,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers mark dirty 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge customer 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge customer 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "id": 1,
    "name": "Alex",
  },
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge ticket 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "messages": Array [
    Object {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge ticket 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "id": 1,
  "messages": Array [
    Object {
      "body_html": "<div>hi</div>",
      "body_text": "hi",
      "channel": "email",
      "created_datetime": "2017-07-28T22:00:00",
      "id": 1,
    },
    Object {
      "body_html": "<div>hello</div>",
      "body_text": "hello",
      "channel": "email",
      "created_datetime": "2017-07-29T22:00:00",
      "id": 2,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge users 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers merge users 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "id": 1,
    "name": "Alex",
  },
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers remove request 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [
    Object {
      "id": 1,
      "request_id": null,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers remove tag 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "refund",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers remove tag 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [
    Object {
      "name": "billing",
    },
  ],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set agent 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": Object {
    "id": 1,
  },
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set agent 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set customer 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": Object {
    "data": Object {
      "hello": "world!",
    },
    "id": 1,
  },
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set request 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [
    Object {
      "id": 1,
      "request_id": 2,
    },
  ],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set spam 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": true,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set spam 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set status 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "closed",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers set subject 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "another title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers submit new message 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": "123",
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers submit new message 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "failed_datetime": "2017-01-01T00:00:00.000Z",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers submit new message 3`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [
      Object {
        "_internal": Object {
          "id": 1,
          "status": "open",
        },
        "body_html": "<div>hello</div>",
        "body_text": "hello",
        "channel": "email",
        "created_datetime": "2017-07-29T22:00:00",
        "originalMessage": Object {
          "body_html": "<div>hello</div>",
          "body_text": "hello",
          "channel": "email",
          "source": Object {
            "bcc": Array [],
            "cc": Array [],
            "from": Object {},
            "to": Array [
              Object {
                "address": "alex@gorgias.io",
              },
            ],
            "type": "email",
          },
        },
        "source": Object {
          "bcc": Array [],
          "cc": Array [],
          "from": Object {},
          "to": Array [
            Object {
              "address": "alex@gorgias.io",
            },
          ],
          "type": "email",
        },
      },
    ],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers submit ticket 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "id": 12,
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "title",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers toggle history 1`] = `
Object {
  "_internal": Object {
    "displayHistory": true,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers toggle history 2`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers toggle history 3`] = `
Object {
  "_internal": Object {
    "displayHistory": true,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers update macro action args on applied 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": Object {
      "actions": Object {
        "0": Object {
          "arguments": Object {
            "hello": "world",
          },
        },
      },
      "id": 1,
    },
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;

exports[`ticket reducers update message 1`] = `
Object {
  "_internal": Object {
    "displayHistory": false,
    "loading": Object {
      "deleteMessage": false,
      "fetchTicket": false,
    },
    "pendingMessages": Array [],
    "shouldDisplayHistoryOnNextPage": false,
  },
  "assignee_user": null,
  "channel": "email",
  "customer": null,
  "events": Array [],
  "messages": Array [],
  "priority": "normal",
  "receiver": null,
  "sender": null,
  "spam": false,
  "state": Object {
    "appliedMacro": null,
    "dirty": false,
    "latestEventDatetime": null,
  },
  "status": "open",
  "subject": "",
  "tags": Array [],
  "trashed_datetime": null,
  "via": "helpdesk",
}
`;
